--- a/notebooks/reading_local_files.ipynb
+++ b/notebooks/reading_local_files.ipynb
@@ -14,9 +14,9 @@
     "We'll covering the following\n",
     "- Importing different files and filetypes with [```pandas```](https://pandas.pydata.org/docs/index.html)\n",
     "- Basic Statistical Analysis of tabular data with ```pandas``` and ```numpy```\n",
-    "- Creating Charts with python packages from the [HoloViz Ecosystem](https://holoviz.org/background.html#background-why-holoviz)\n",
+    "- Creating Charts with python packages from the [Plotly](https://plotly.com/python/) & [HoloViz Ecosystem](https://holoviz.org/background.html#background-why-holoviz)\n",
     "\n",
-    "![EvidenceOfLearning](assets/learning.gif)"
+    "![EvidenceOfLearning](../images/learning.gif)"
    ]
   },
   {
@@ -47,7 +47,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cary_dev",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -61,12 +61,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "71fb11914f94fc2c90e6061170f2222c8b50268100b040249549820f4859e21e"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
