--- a/notebooks/python_101.ipynb
+++ b/notebooks/python_101.ipynb
@@ -2063,7 +2063,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cary_dev",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2077,11 +2077,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "71fb11914f94fc2c90e6061170f2222c8b50268100b040249549820f4859e21e"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
