edit to make text contextually relevant

--- a/notebooks/introduction_to_data_analysis.ipynb
+++ b/notebooks/introduction_to_data_analysis.ipynb
@@ -32,10 +32,10 @@
     "- **Drawing Conclusions**: After we have thoroughly explored our data, we can try to draw conclusions or model it.\n",
     "\n",
     "## Statistical Foundations\n",
-    "As this is not a statistics book, we will discuss the concepts we will need to work through the book, in addition to some avenues for further exploration. By no means is this exhaustive.\n",
+    "As this is an overview of statistics, we will discuss some concepts. By no means is this exhaustive.\n",
     "\n",
     "### Sampling\n",
-    "Some resampling (sampling from the sample) techniques we will see throughout the book, especially for the chapters on machine learning (9-11):\n",
+    "Some resampling (sampling from the sample) techniques you will see:\n",
     "- **simple random sampling**: pick with a random number generator\n",
     "- **stratified random sampling**: randomly pick preserving the proportion of groups in the data\n",
     "- **bootstrapping**: sampling with replacement (more info: [YouTube video](https://www.youtube.com/watch?v=gcPIyeqymOU) and [Wikipedia article](https://en.wikipedia.org/wiki/Bootstrapping_(statistics)))\n",
