--- a/notebooks/reading_local_files.ipynb
+++ b/notebooks/reading_local_files.ipynb
@@ -34,8 +34,36 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "# This will import the pandas package into your Python program."
+    "# This will import the pandas and numpy packages into your Python program.\n",
+    "\n",
+    "df_json = pd.read_json('../data/food-waste-pilot/food-waste-pilot.json')\n",
+    "df_csv = pd.read_csv('../data/food-waste-pilot/food-waste-pilot.csv')\n",
+    "df_xlsx = pd.read_excel('../data/food-waste-pilot/food-waste-pilot.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collection Date                      object\n",
+       "Food Waste Collected                float64\n",
+       "Estimated Earned Compost Created      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_xlsx.dtypes"
    ]
   },
   {
@@ -47,7 +75,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cary_dev",
    "language": "python",
    "name": "python3"
   },
@@ -61,12 +89,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "208c1dc3e806fa3950fd42f8b8b722ebcf279029da67d0c91d0b3aeabadbfb76"
    }
   }
  },
