--- a/notebooks/introduction_to_data_analysis.ipynb
+++ b/notebooks/introduction_to_data_analysis.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from visual_aids import stats_viz"
+    "import stats_viz"
    ]
   },
   {
@@ -629,7 +629,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cary_dev",
    "language": "python",
    "name": "python3"
   },
@@ -643,7 +643,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "71fb11914f94fc2c90e6061170f2222c8b50268100b040249549820f4859e21e"
+   }
   }
  },
  "nbformat": 4,
