--- a/notebooks/reading_local_files.ipynb
+++ b/notebooks/reading_local_files.ipynb
@@ -7,14 +7,15 @@
    "source": [
     "# An Introduction to Jupyter Notebooks\n",
     "\n",
-    "Jupyter Notebooks are a file format that you can execute and explain your code in a step-wise format. Jupyter Notebooks support not only code execution in Python, but a variety of languages as long as you have the proper kernel installed that will interpret your code.\n",
+    "Jupyter Notebooks are a file format (```*.ipynb```) that you can execute and explain your code in a step-wise format. Jupyter Notebooks support not only code execution in Python, but a variety of languages as long as you have the proper kernel installed that will interpret your code.\n",
     "\n",
     "We can write in Markdown to write text with some level of control over your formatting. [Here's a link to a Medium article detailing <em>all</em> you can do with Markdown styling in Jupyter Notebooks.](https://medium.com/analytics-vidhya/the-ultimate-markdown-guide-for-jupyter-notebook-d5e5abf728fd)\n",
     "\n",
     "We'll covering the following\n",
     "- Importing different files and filetypes with [```pandas```](https://pandas.pydata.org/docs/index.html)\n",
     "- Basic Statistical Analysis of tabular data with ```pandas``` and ```numpy```\n",
-    "- Creating Charts with python packages from the [Plotly](https://plotly.com/python/) & [HoloViz Ecosystem](https://holoviz.org/background.html#background-why-holoviz)\n",
+    "- Creating Charts with python packages from the [Matplotlib](https://matplotlib.org/), [Plotly](https://plotly.com/python/), or [HoloViz Ecosystem](https://holoviz.org/background.html#background-why-holoviz)\n",
+    "- Evaluate the potential usecases for each visualization package\n",
     "\n",
     "![EvidenceOfLearning](../images/learning.gif)"
    ]
