--- a/notebooks/reading_local_files.ipynb
+++ b/notebooks/reading_local_files.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# An Introduction to Jupyter Notebooks\n",
     "\n",
-    "Jupyter Notebooks are a file format (```*.ipynb```) that you can execute and explain your code in a step-wise format. Jupyter Notebooks support not only code execution in Python, but a variety of languages as long as you have the proper kernel installed that will interpret your code.\n",
+    "Jupyter Notebooks are a file format (```*.ipynb```) that you can execute and explain your code in a step-wise format.\n",
+    "> Jupyter Notebooks supports not only code execution in Python, but over 40 languages including R, Lua, Rust, and Julia with numerous [kernels](https://docs.jupyter.org/en/latest/projects/kernels.html#kernels-programming-languages).\n",
     "\n",
     "We can write in Markdown to write text with some level of control over your formatting.\n",
     "- [Here's a Link to Basic Markdown](https://www.markdownguide.org/basic-syntax/)\n",
@@ -19,7 +20,9 @@
     "- Creating Charts with python packages from the [Matplotlib](https://matplotlib.org/), [Plotly](https://plotly.com/python/), or [HoloViz Ecosystem](https://holoviz.org/background.html#background-why-holoviz)\n",
     "- Evaluate the potential usecases for each visualization package\n",
     "\n",
-    "![EvidenceOfLearning](../images/learning.gif)"
+    "![EvidenceOfLearning](../images/learning.gif)\n",
+    "<br>\n",
+    "*This is you, enjoying the learning process.*"
    ]
   },
   {
