--- a/notebooks/introduction_to_data_analysis.ipynb
+++ b/notebooks/introduction_to_data_analysis.ipynb
@@ -608,7 +608,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -629,7 +628,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cary_dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
