--- a/notebooks/reading_local_files.ipynb
+++ b/notebooks/reading_local_files.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,13 +271,135 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_csv.dtypes # Returns the data types of your columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Food Waste Collected</th>\n",
+       "      <th>Estimated Earned Compost Created</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>152.000000</td>\n",
+       "      <td>152.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>526.873684</td>\n",
+       "      <td>52.611842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>197.838075</td>\n",
+       "      <td>19.787631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>398.050000</td>\n",
+       "      <td>39.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>531.500000</td>\n",
+       "      <td>53.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>658.900000</td>\n",
+       "      <td>66.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1065.800000</td>\n",
+       "      <td>107.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Food Waste Collected  Estimated Earned Compost Created\n",
+       "count            152.000000                        152.000000\n",
+       "mean             526.873684                         52.611842\n",
+       "std              197.838075                         19.787631\n",
+       "min                0.000000                          0.000000\n",
+       "25%              398.050000                         39.750000\n",
+       "50%              531.500000                         53.000000\n",
+       "75%              658.900000                         66.000000\n",
+       "max             1065.800000                        107.000000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_csv.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 152 entries, 0 to 151\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column                            Non-Null Count  Dtype  \n",
+      "---  ------                            --------------  -----  \n",
+      " 0   Collection Date                   152 non-null    object \n",
+      " 1   Food Waste Collected              152 non-null    float64\n",
+      " 2   Estimated Earned Compost Created  152 non-null    int64  \n",
+      "dtypes: float64(1), int64(1), object(1)\n",
+      "memory usage: 3.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_csv.info() # Returns index, column names, a count of Non-Null values, and data types."
    ]
   },
   {
@@ -408,6 +530,32 @@
    ],
    "source": [
     "df_csv.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collection Date    2022-08-10\n",
+       "Name: 20, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What if we want to know the date that we collected the most food waste?\n",
+    "\n",
+    "df_csv.loc[\n",
+    "    df_csv['Food Waste Collected'].idxmax(),\n",
+    "    ['Collection Date']\n",
+    "]"
    ]
   },
   {
