--- a/notebooks/python_errors.ipynb
+++ b/notebooks/python_errors.ipynb
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Catching Expections with Try Statements \n",
+    "## Catching Exceptions with Try Statements \n",
     "\n",
     "You can use a `try` statement to catch errors. A `try` clause includes the code you want to run that might cause an error. If no error occurs, the `try` clause runs successfully. If an error does occur, the `except` clause runs after the line in the `try` clause that caused an error."
    ]
