update example to non-UTC datetime format

--- a/notebooks/reading_local_files.ipynb
+++ b/notebooks/reading_local_files.ipynb
@@ -464,20 +464,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gpower\\AppData\\Local\\Temp\\ipykernel_29916\\2988934043.py:3: FutureWarning: Using .astype to convert from timezone-naive dtype to timezone-aware dtype is deprecated and will raise in a future version.  Use ser.dt.tz_localize instead.\n",
-      "  df_csv['Collection Date'] = df_csv['Collection Date'].astype('datetime64[ns, UTC]')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# astype() is more generic method to convert data types\n",
     "\n",
-    "df_csv['Collection Date'] = df_csv['Collection Date'].astype('datetime64[ns, UTC]')"
+    "df_csv['Collection Date'] = df_csv['Collection Date'].astype('datetime64[ns]')"
    ]
   },
   {
@@ -488,9 +479,9 @@
     {
      "data": {
       "text/plain": [
-       "Collection Date                     datetime64[ns, UTC]\n",
-       "Food Waste Collected                            float64\n",
-       "Estimated Earned Compost Created                  int64\n",
+       "Collection Date                     datetime64[ns]\n",
+       "Food Waste Collected                       float64\n",
+       "Estimated Earned Compost Created             int64\n",
        "dtype: object"
       ]
      },
@@ -522,7 +513,7 @@
     {
      "data": {
       "text/plain": [
-       "Collection Date    2022-08-10 00:00:00+00:00\n",
+       "Collection Date    2022-08-10 00:00:00\n",
        "Name: 20, dtype: object"
       ]
      },
@@ -575,70 +566,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>2022-08-10 00:00:00+00:00</td>\n",
+       "      <td>2022-08-10</td>\n",
        "      <td>1065.8</td>\n",
        "      <td>107</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>124</th>\n",
-       "      <td>2022-12-27 00:00:00+00:00</td>\n",
+       "      <td>2022-12-27</td>\n",
        "      <td>987.4</td>\n",
        "      <td>99</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>48</th>\n",
-       "      <td>2022-09-12 00:00:00+00:00</td>\n",
+       "      <td>2022-09-12</td>\n",
        "      <td>977.8</td>\n",
        "      <td>98</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>151</th>\n",
-       "      <td>2023-01-06 00:00:00+00:00</td>\n",
+       "      <td>2023-01-06</td>\n",
        "      <td>968.6</td>\n",
        "      <td>97</td>\n",
        "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
-       "      <td>2022-10-31 00:00:00+00:00</td>\n",
+       "      <td>2022-10-31</td>\n",
        "      <td>953.4</td>\n",
        "      <td>95</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-03-28 00:00:00+00:00</td>\n",
+       "      <td>2022-03-28</td>\n",
        "      <td>857.2</td>\n",
        "      <td>86</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123</th>\n",
-       "      <td>2022-11-28 00:00:00+00:00</td>\n",
+       "      <td>2022-11-28</td>\n",
        "      <td>844.4</td>\n",
        "      <td>84</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57</th>\n",
-       "      <td>2022-12-05 00:00:00+00:00</td>\n",
+       "      <td>2022-12-05</td>\n",
        "      <td>834.4</td>\n",
        "      <td>83</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>91</th>\n",
-       "      <td>2022-12-30 00:00:00+00:00</td>\n",
+       "      <td>2022-12-30</td>\n",
        "      <td>815.4</td>\n",
        "      <td>82</td>\n",
        "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>137</th>\n",
-       "      <td>2022-07-18 00:00:00+00:00</td>\n",
+       "      <td>2022-07-18</td>\n",
        "      <td>807.8</td>\n",
        "      <td>81</td>\n",
        "      <td>Monday</td>\n",
@@ -648,29 +639,29 @@
        "</div>"
       ],
       "text/plain": [
-       "              Collection Date  Food Waste Collected  \\\n",
-       "20  2022-08-10 00:00:00+00:00                1065.8   \n",
-       "124 2022-12-27 00:00:00+00:00                 987.4   \n",
-       "48  2022-09-12 00:00:00+00:00                 977.8   \n",
-       "151 2023-01-06 00:00:00+00:00                 968.6   \n",
-       "149 2022-10-31 00:00:00+00:00                 953.4   \n",
-       "3   2022-03-28 00:00:00+00:00                 857.2   \n",
-       "123 2022-11-28 00:00:00+00:00                 844.4   \n",
-       "57  2022-12-05 00:00:00+00:00                 834.4   \n",
-       "91  2022-12-30 00:00:00+00:00                 815.4   \n",
-       "137 2022-07-18 00:00:00+00:00                 807.8   \n",
+       "    Collection Date  Food Waste Collected  Estimated Earned Compost Created  \\\n",
+       "20       2022-08-10                1065.8                               107   \n",
+       "124      2022-12-27                 987.4                                99   \n",
+       "48       2022-09-12                 977.8                                98   \n",
+       "151      2023-01-06                 968.6                                97   \n",
+       "149      2022-10-31                 953.4                                95   \n",
+       "3        2022-03-28                 857.2                                86   \n",
+       "123      2022-11-28                 844.4                                84   \n",
+       "57       2022-12-05                 834.4                                83   \n",
+       "91       2022-12-30                 815.4                                82   \n",
+       "137      2022-07-18                 807.8                                81   \n",
        "\n",
-       "     Estimated Earned Compost Created Day of Week  \n",
-       "20                                107   Wednesday  \n",
-       "124                                99     Tuesday  \n",
-       "48                                 98      Monday  \n",
-       "151                                97      Friday  \n",
-       "149                                95      Monday  \n",
-       "3                                  86      Monday  \n",
-       "123                                84      Monday  \n",
-       "57                                 83      Monday  \n",
-       "91                                 82      Friday  \n",
-       "137                                81      Monday  "
+       "    Day of Week  \n",
+       "20    Wednesday  \n",
+       "124     Tuesday  \n",
+       "48       Monday  \n",
+       "151      Friday  \n",
+       "149      Monday  \n",
+       "3        Monday  \n",
+       "123      Monday  \n",
+       "57       Monday  \n",
+       "91       Friday  \n",
+       "137      Monday  "
       ]
      },
      "execution_count": 16,
@@ -719,70 +710,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
-       "      <td>2022-11-11 00:00:00+00:00</td>\n",
+       "      <td>2022-11-11</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>2023-01-16 00:00:00+00:00</td>\n",
+       "      <td>2023-01-16</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
-       "      <td>2022-09-05 00:00:00+00:00</td>\n",
+       "      <td>2022-09-05</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>2022-02-09 00:00:00+00:00</td>\n",
+       "      <td>2022-02-09</td>\n",
        "      <td>59.0</td>\n",
        "      <td>6</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
-       "      <td>2022-02-16 00:00:00+00:00</td>\n",
+       "      <td>2022-02-16</td>\n",
        "      <td>102.8</td>\n",
        "      <td>10</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>63</th>\n",
-       "      <td>2022-02-21 00:00:00+00:00</td>\n",
+       "      <td>2022-02-21</td>\n",
        "      <td>183.8</td>\n",
        "      <td>18</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
-       "      <td>2022-02-11 00:00:00+00:00</td>\n",
+       "      <td>2022-02-11</td>\n",
        "      <td>197.0</td>\n",
        "      <td>20</td>\n",
        "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
-       "      <td>2022-04-15 00:00:00+00:00</td>\n",
+       "      <td>2022-04-15</td>\n",
        "      <td>200.8</td>\n",
        "      <td>20</td>\n",
        "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
-       "      <td>2022-02-18 00:00:00+00:00</td>\n",
+       "      <td>2022-02-18</td>\n",
        "      <td>202.8</td>\n",
        "      <td>20</td>\n",
        "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>2022-12-10 00:00:00+00:00</td>\n",
+       "      <td>2022-12-10</td>\n",
        "      <td>205.8</td>\n",
        "      <td>21</td>\n",
        "      <td>Saturday</td>\n",
@@ -792,29 +783,29 @@
        "</div>"
       ],
       "text/plain": [
-       "              Collection Date  Food Waste Collected  \\\n",
-       "53  2022-11-11 00:00:00+00:00                   0.0   \n",
-       "95  2023-01-16 00:00:00+00:00                   0.0   \n",
-       "114 2022-09-05 00:00:00+00:00                   0.0   \n",
-       "97  2022-02-09 00:00:00+00:00                  59.0   \n",
-       "36  2022-02-16 00:00:00+00:00                 102.8   \n",
-       "63  2022-02-21 00:00:00+00:00                 183.8   \n",
-       "61  2022-02-11 00:00:00+00:00                 197.0   \n",
-       "39  2022-04-15 00:00:00+00:00                 200.8   \n",
-       "62  2022-02-18 00:00:00+00:00                 202.8   \n",
-       "29  2022-12-10 00:00:00+00:00                 205.8   \n",
+       "    Collection Date  Food Waste Collected  Estimated Earned Compost Created  \\\n",
+       "53       2022-11-11                   0.0                                 0   \n",
+       "95       2023-01-16                   0.0                                 0   \n",
+       "114      2022-09-05                   0.0                                 0   \n",
+       "97       2022-02-09                  59.0                                 6   \n",
+       "36       2022-02-16                 102.8                                10   \n",
+       "63       2022-02-21                 183.8                                18   \n",
+       "61       2022-02-11                 197.0                                20   \n",
+       "39       2022-04-15                 200.8                                20   \n",
+       "62       2022-02-18                 202.8                                20   \n",
+       "29       2022-12-10                 205.8                                21   \n",
        "\n",
-       "     Estimated Earned Compost Created Day of Week  \n",
-       "53                                  0      Friday  \n",
-       "95                                  0      Monday  \n",
-       "114                                 0      Monday  \n",
-       "97                                  6   Wednesday  \n",
-       "36                                 10   Wednesday  \n",
-       "63                                 18      Monday  \n",
-       "61                                 20      Friday  \n",
-       "39                                 20      Friday  \n",
-       "62                                 20      Friday  \n",
-       "29                                 21    Saturday  "
+       "    Day of Week  \n",
+       "53       Friday  \n",
+       "95       Monday  \n",
+       "114      Monday  \n",
+       "97    Wednesday  \n",
+       "36    Wednesday  \n",
+       "63       Monday  \n",
+       "61       Friday  \n",
+       "39       Friday  \n",
+       "62       Friday  \n",
+       "29     Saturday  "
       ]
      },
      "execution_count": 17,
