--- a/notebooks/reading_local_files.ipynb
+++ b/notebooks/reading_local_files.ipynb
@@ -40,7 +40,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "# This will import the pandas and numpy packages into your Python program.\n",
     "\n",
@@ -852,7 +851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## You Have to Make sure the `pandas` parses your dates"
+    "## You have to make sure that `pandas` parses your dates"
    ]
   },
   {
@@ -911,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
